--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
   "main": "server.js",
+  "dependencies": {
+    "express": "3.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Chareesa/GuessingGame_V2.git"
   },
-  "author": "",
+  "author": "Chareesa Graham",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chareesa/GuessingGame_V2/issues"
