--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,13 @@
     "test",
     "tests"
   ],
+  {
+    "storage": {
+        "packages": ".bower-cache",
+        "registry": ".bower-registry"
+    },
+    "tmp": ".bower-tmp"
+  },
   "dependencies": {
     "jquery": "~2.1.1"
   }
