add jquery to package.json dependencies

--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "GuessingGame_V2",
-  "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
   "version": "1.0.0",
+  "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
+  "main": "server.js",
+  "dependencies": {
+    "express": "3.x",
+    "jquery": "^2.1.3"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Chareesa/GuessingGame_V2.git"
   },
+  "author": "",
   "author": "Chareesa Graham",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chareesa/GuessingGame_V2/issues"
   },
-  "homepage": "https://github.com/Chareesa/GuessingGame_V2",
-  "dependencies": {
-    "express": "3.x"
-  }
+  "homepage": "https://github.com/Chareesa/GuessingGame_V2"
 }
