--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "GuessingGame_V2",
   "version": "1.0.0",
   "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
-  "main": "server.js",
+  "engines": {
+    "node": ">=0.10.33"
+  },
   "dependencies": {
     "express": "3.x",
     "jquery": "^2.1.3"
@@ -14,7 +16,6 @@
     "type": "git",
     "url": "https://github.com/Chareesa/GuessingGame_V2.git"
   },
-  "author": "",
   "author": "Chareesa Graham",
   "license": "ISC",
   "bugs": {
