--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
   "dependencies": {
     "express": "3.x",
-    "jquery": "^2.1.3"
+    "http": "0.0.0"
   },
   "scripts": {
     "start": "node server.js"
