--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Simple guessing game using JQuery, JS, HTML, and CSS",
   "dependencies": {
-    "express": "3.x",
-    "http": "0.0.0"
+    "express": "3.x"
   },
   "scripts": {
     "start": "node server.js"
